# fin_projects

./: MOI.txt  README.md  data_retriever.py  pyproject.toml
DCF/: dcf_report.ipynb
DCF/src/: tickers.txt
