[tool.poetry]
name = "fin-project-toml"
version = "0.1.0"
description = "\"Project for retrieving stock data and analyzation\""
authors = ["teemuStp <teemu.stepanoff@outlook.com>"]
license = "\"CC\""
readme = "README.md"
packages = [{include = "fin_project"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
